fix for bug 10033 - failing to resolve at runtime interfaces that were forward declared in one xpt file and resolved in another xpt file. r: mccabe